--- a/Code/AudioPlayersDemos/Android-Media-Player/app/src/main/res/layout/activity_main.xml
+++ b/Code/AudioPlayersDemos/Android-Media-Player/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:gravity="center"
+    android:padding="10dp"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <Button
+        android:id="@+id/playAndPauseId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/str_play"
+        android:layout_weight="1"
+        style="?android:attr/buttonBarButtonStyle" />
+
+    <Button
+        android:id="@+id/stopId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/str_stop"
+        android:layout_weight="1"
+        style="?android:attr/buttonBarButtonStyle" />
 
 </LinearLayout>
